fix horizontal scroll on upload page, fix back button sizing on iOS

--- a/client-side/src/components/BackButton/BackButton.module.css
+++ b/client-side/src/components/BackButton/BackButton.module.css
@@ -1,6 +1,6 @@
 .backButton{
-    height: 1em;
-    width: 1em;
+    height: 3em;
+    width: 3em;
     background-color: transparent;
     border: none;
     display: block;
